plugins {
    id 'java-library'
    id 'maven-publish'
    id "com.vanniktech.maven.publish"
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
}

evaluationDependsOn(':xklib-ui')

version = xklib_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neo_version

    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            clientData()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)

        }
    }
}
sourceSets.main.resources { srcDir 'src/generated/resources' }
configurations {
    runtimeClasspath.extendsFrom localRuntime

}

repositories {
    mavenCentral()
}

dependencies {
//    jarJar("dev.vfyjxf:taffy:1.1.4")
//    jarJar("org.antlr:antlr4-runtime:4.13.2")
//    jarJar("net.lenni0451:LambdaEvents:2.4.2")
//    jarJar(implementation project(":xklib-3d"))
//    jarJar(implementation project(':xklib-ui'))
//    jarJar(implementation project(':xklib-ap'))
    implementation project(":xklib-3d")
    implementation project(':xklib-ui')
    implementation project(':xklib-ap')
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : xklib_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

jar {
    manifest {
        attributes(
                'Automatic-Module-Name': 'com.xkball.xklib.mc'
        )
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

mavenPublishing {
    publishToMavenCentral(true)
    signAllPublications()
    coordinates("com.xkball", "xklib-mc", version)

    pom {
        name = "xklib-mc"
        url = "https://github.com/xkball/xklib-ui"
        description = "a minecraft mod lib."

        licenses {
            license {
                name = 'GNU LESSER GENERAL PUBLIC LICENSE Version 3 '
                url = 'https://www.gnu.org/licenses/lgpl-3.0.html'
            }
        }

        developers {
            developer {
                id = 'xkball'
                name = 'xkball'
                email = 'xkball996@gmail.com'
            }
        }

        scm {
            connection = 'scm:git:git://github.com/xkball/xklib-ui.git'
            developerConnection = 'scm:git:ssh://github.com/xkball/xklib-ui.git'
            url = 'https://github.com/xkball/xklib-ui/tree/master'
        }
    }
}